--- a/src/BookingSystem.Service.Hotel.Infrastructure/BookingSystem.Service.Hotel.Infrastructure.csproj
+++ b/src/BookingSystem.Service.Hotel.Infrastructure/BookingSystem.Service.Hotel.Infrastructure.csproj
@@ -1,5 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookingSystem.Service.Hotel.Application\BookingSystem.Service.Hotel.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
