--- a/src/BookingSystem.Service.Hotel.Persistence/BookingSystem.Service.Hotel.Persistence.csproj
+++ b/src/BookingSystem.Service.Hotel.Persistence/BookingSystem.Service.Hotel.Persistence.csproj
@@ -1,5 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookingSystem.Service.Hotel.Domain\BookingSystem.Service.Hotel.Domain.csproj" />
+    <ProjectReference Include="..\BookingSystem.Service.Hotel.Application\BookingSystem.Service.Hotel.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
