AR: Added initial migration script

--- a/src/BookingSystem.Service.Hotel.Api/appsettings.json
+++ b/src/BookingSystem.Service.Hotel.Api/appsettings.json
@@ -1,5 +1,8 @@
 {
-  "Logging": {
+    "ConnectionStrings": {
+        "HotelDatabase": "Host=localhost;Port=5432;Database=HotelBookingDB;Username=postgres;Password=admin"
+    },
+    "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
